fedora/42/k8s/pa-dpsrv-mtls.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default
  namespace: dpsrv
spec:
  mtls:
    mode: STRICT
