fedora/42/k8s/destrule-dpsrv.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: namespace-mtls
  namespace: dpsrv  # same namespace
spec:
  host: "*.dpsrv.svc.cluster.local"  # all services in the namespace
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
